# auxiliary

./: .gitignore
commu4scnet/: CMakeLists.txt  commu4scnet.prj
commu4scnet/doc/: ChangeLog.txt  PQNet1xx2xxD 参数设置作业指导书.md  putty4pqnet_1_71.bat  scnettool
commu4scnet/src/: CMakeLists.txt  commu4scnet.cpp  commu4scnet.h  main.cpp  misc.cpp  misc.h
commu4scnet/src/parse_optn/: parse_option.cpp  parse_option.h  parse_optn_scnet.cpp  parse_optn_scnet.h
comtrade_test/: CMakeLists.txt  comtrade_test.prj
comtrade_test/src/: CMakeLists.txt  comtrade_test.cpp  comtrade_test.h  main.cpp
cvt_test/: CMakeLists.txt
cvt_test/src/: CMakeLists.txt  elec_cmpnnt.cpp  elec_cmpnnt.h  main.cpp  rcl.cpp  rcl.h
cycxx_view/: CMakeLists.txt  cycxx_view.prj  sync.ffs_db
cycxx_view/0.doc/: ChangeLog.txt  Manual.md  Manual.xml
cycxx_view/src/: CMakeLists.txt  cyc10_save.h  cyc150_save.h  main.cpp
cycxx_view/src/misc/: generic.cpp  generic.h  loop_buf_base.cpp  loop_buf_base.h  loop_buffer.h  loop_pointer.h  loopbuf_sort.h  math_ext.cpp  math_ext.h  sync.ffs_db
dfilter_test/: CMakeLists.txt
dfilter_test/0.doc/: ChangeLog.txt  dfilter_test_record.xlsx  ~$dfilter_test_record.xlsx
dfilter_test/src/: CMakeLists.txt  digital_filter.cpp  digital_filter.h  main.cpp  sync.ffs_db
diskspace_mng/: CMakeLists.txt
diskspace_mng/doc/: Manual.md
diskspace_mng/src/: CMakeLists.txt  main.cpp
fft_test/: CMakeLists.txt
fft_test/0.doc/: ChangeLog.txt  test record.txt
fft_test/src/: CMakeLists.txt  fft_sea.c  fft_sea.h  main.cpp
flicker_tst/: CMakeLists.txt  flicker_tst.prj
flicker_tst/0.doc/: ChangeLog.txt  Manual.md  test record.txt
flicker_tst/src/: CMakeLists.txt  flicker_filter.c  flicker_filter.h  flicker_statis.cpp  flicker_statis.h  main.cpp
flicker_tst/src/parse_optn/: parse_option.cpp  parse_option.h  parse_optn_flicker.cpp
interpolate_test/: CMakeLists.txt  interpolate_test.prj
interpolate_test/0.doc/: ChangeLog.txt  Manual.md  Quadratic_Spline_test_record.xlsx
interpolate_test/src/: CMakeLists.txt  interpolate.cpp  interpolate.h  main.cpp  math_ext.cpp  math_ext.h
md5sum/: CMakeLists.txt  md5sum.prj
md5sum/0.doc/: ChangeLog.txt
md5sum/src/: CMakeLists.txt  md5sum.cpp
md5sum/src/hash/: md5.cpp  md5.h
mqtt_client/: .gitignore  CMakeLists.txt  mqtt_client.code-workspace
mqtt_client/0.doc/: ChangeLog.txt  Manual.xml  manual.md
mqtt_client/src/: CMakeLists.txt  CMakeLists4commu_mqttc.txt  main.cpp  mqtt_client.cpp  mqtt_client.h  parse_optn_mqttc.cpp  parse_optn_mqttc.h  thrd_socket.cpp  thrd_timer.cpp
mqtt_client/src/config/: param_cfg.cpp  param_cfg.h
mqtt_client/src/data/: data_buf.cpp  data_buf.h  data_bufs.cpp  data_bufs.h
mqtt_client/src/test/: test_pqm.cpp  test_pqm.h
nerec_view/: CMakeLists.txt  nerec_view.code-workspace
nerec_view/0.doc/: ChangeLog.txt  Manual.md
nerec_view/src/: CMakeLists.txt  main.cpp  ne_msg_dif.h
nerec_view/src/misc/: CMakeLists.txt  param_phd.h  time_cst.cpp  time_cst.h
ntpclient/: .gitignore  CMakeLists.txt  ntpclient.prj
ntpclient/0.doc/: ChangeLog.txt  HOWTO  Makefile  Manual.xml
ntpclient/release/: adjtimex  frq.err  meas_frq_err.sh  ntpclient  ntpclient.sh
ntpclient/src/ntpclient/: CMakeLists.txt  ntpclient.c
peenet_flicker_tst/: CMakeLists.txt  peenet_flicker_tst.prj
peenet_flicker_tst/0.doc/: Manual.xml  test record.txt
peenet_flicker_tst/src/: CMakeLists.txt  demo.c  flicker_filter.c  flicker_filter.h  flicker_statis.c  flicker_statis.c.bak  flicker_statis.h  main.cpp
peenet_flicker_tst/src/bak/: flicker_statis.c
peenet_flicker_tst/src/parse_optn/: parse_optn_flicker.h
sys_mngr/: CMakeLists.txt  sys_mngr.prj
sys_mngr/0.doc/: ChangeLog.txt
sys_mngr/src/: CMakeLists.txt  main.cpp  watchdog.h
tool_kit/: CMakeLists.txt
tool_kit/0.doc/: todo.txt
tool_kit/0.doc/ntpclient/: ChangeLog.txt  Manual.md
tool_kit/release/lua_script/: interfaces  set_ipv6.lua
tool_kit/release/ntpclient/: adjsysfreq.sh  meas_frq_err.sh  ntp_ipv4.lua  ntpclient  start_ntpd.sh
tool_kit/release/ntpclient/.obsolete/: ntpclient.sh
tool_kit/src/adjtimex/: CMakeLists.txt
tool_kit/src/ntpclient/: CMakeLists.txt  ntpclient.c
